适配iphone自动化 v0.2.1
