# docs/swagger.json
@@ -82,7 +82,7 @@
                     "multipart/form-data"
                 ],
                 "produces": [
-                    "multipart/form-data"
+                    "application/json"
                 ],
                 "tags": [
                     "图片"
@@ -93,6 +93,41 @@
                         "type": "file",
                         "description": "图片文件",
                         "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/image.UploadResp"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "使用multipart/form-data格式上传图片，支持Apple自动化调用",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "图片"
+                ],
+                "summary": "表单上传图片",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "图片文件（支持curl -F \\",
+                        "name": "image",
                         "in": "formData",
                         "required": true
                     }
